<resources>
    <string name="app_name">Laboratorio 11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species_subtitle">Species:</string>
    <string name="status_subtitle">Status:</string>
    <string name="gender_subtitle">Gender:</string>
    <string name="test_species_info">Human</string>
    <string name="test_status_info">Alive</string>
    <string name="test_gender_info">Male</string>
    <string name="test_name">Morty Smith</string>
    <string name="test_name_item">Rick Sanchez</string>
    <string name="test_info_item">Human - Alive</string>
    <string name="test_origin_info">Earth</string>
    <string name="origin_subtitle">Origin:</string>
    <string name="test_appearances_info">51</string>
    <string name="appearances_subtitle">Episode appearances:</string>
    <string name="inputLayout_email_hint">Correo</string>
    <string name="valid_mail">gue21781@uvg.edu.gt</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="inputLayout_password_hint">Contraseña</string>
    <string name="name_subtitle">Name</string>
    <string name="btn_guardar_text">Guardar</string>
</resources>