<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/img_RickAndMorty_LoginFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleY="1.5"
        android:scaleX="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputText_mail_loginFragment"
        android:src="@mipmap/ic_rym_foreground"
        app:layout_constraintVertical_chainStyle="packed"
        />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText_mail_loginFragment"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_RickAndMorty_LoginFragment"
        app:layout_constraintBottom_toTopOf="@id/inputText_password_loginFragment"
        android:layout_marginHorizontal="@dimen/default_margin"
        >
        
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/inputLayout_email_hint"
            tools:text="@string/valid_mail"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText_password_loginFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login_loginFragment"
        app:layout_constraintTop_toBottomOf="@id/inputText_mail_loginFragment"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/inputLayout_password_hint"
            android:inputType="textPassword"
            tools:text="@string/valid_mail"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_loginFragment"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputText_password_loginFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/login_btn"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/valid_mail"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/large_margin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>